# idea-generator

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  bench.txt  benchmark.sh  docker-compose.yml  ideas.txt  llm_factory.py  llm_log_20260223_084136.txt  main.py  pyproject.toml  report.md  research.jsonl  slug.py  test-corpus.jsonl  test_search.py  token_tracker.py
.claude/skills/brave-search/: SKILL.md
.claude/skills/langgraph/: SKILL.md
agent/: cli.py  graph.py  tools.py
brave_search/: cli.py  storage.py
index_rag/: chunker.py  cli.py  embedder.py  ids.py  indexer.py  reader.py
insights/: cli.py  loop.py  models.py  prompts.py  rag_store.py  report.py  tools.py
pipeline/: cli.py
research_loop/: cli.py  fetch.py  loop.py  query_gen.py  records.py  search.py
research_loop_openai/: agent.py  cli.py  loop.py
tests/: test_agent_e2e.py  test_agent_tools.py  test_cli.py  test_index_rag.py  test_insights.py  test_pipeline_e2e.py  test_rag_e2e.py  test_research_loop.py  test_research_loop_openai.py  test_storage.py
tests/fixtures/: inventory-sample.jsonl
webapp/: app.py  data.py
webapp/templates/: base.html  index.html  run.html
